ADD - app left block "alert" markup

--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
             <div class="container position-app">
                 <div class="row">
                     <div class="app-section-left">
-                        <div class="profile bg-light-grey1">
+                        <div class="app-block bg-light-grey1">
                             <div class="user">
-                                <img class="user-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
                                 <span class="user-name">Gianluca</span>  
                             </div>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
-                        <div>notifiche</div>
+                        <div class="app-block bg-blue-sky">
+                            <i class="fa-solid fa-bell-slash"></i>                            <div class="alert-banner">
+                                <h2>Ricevi notifiche di nuovi messaggi</h2>  
+                                <p class="text-down">Lorem ipsum dolor sit amet consectetur.</p>  
+                            </div>
+                        </div>
                         <div>barra</div>
                         <ul>contattit</ul>
                     </div>
