--- a/index.html
+++ b/index.html
@@ -14,20 +14,26 @@
             <div class="container position-app">
                 <div class="row">
                     <div class="app-section-left">
-                        <div class="app-block bg-light-grey1">
+                        <div class="app-item bg-light-grey1">
                             <div class="user">
                                 <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
                                 <span class="user-name">Gianluca</span>  
                             </div>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
-                        <div class="app-block bg-blue-sky">
-                            <i class="fa-solid fa-bell-slash"></i>                            <div class="alert-banner">
+                        <div class="app-item bg-blue-sky">
+                            <i class="fa-solid fa-bell-slash"></i> 
+                            <div class="alert-banner">
                                 <h2>Ricevi notifiche di nuovi messaggi</h2>  
                                 <p class="text-down">Lorem ipsum dolor sit amet consectetur.</p>  
                             </div>
                         </div>
-                        <div>barra</div>
+                        <div class="app-search bg-light">
+                            <button class="search-btn">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+                            <input class="search-bar" type="text" placeholder="cerca o inizia una nuova chat">
+                        </div>
                         <ul>contattit</ul>
                     </div>
     
