ADD - contact list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,72 @@
                             </button>
                             <input class="search-bar" type="text" placeholder="cerca o inizia una nuova chat">
                         </div>
-                        <ul>contattit</ul>
+                        <ul class="bg-light contact-list">
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                            <li class="user">
+                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <div>
+                                    <h2 class="user-name">nome</h2>  
+                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                </div>
+                                <span class="chat-time">12:00</span>  
+                            </li>
+                        </ul>
                     </div>
     
                     <div class="app-section-chat">
