--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/5f5f7e14ba.js" crossorigin="anonymous"></script>
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
 </head>
-<body class="debug">
+<body class="debugg">
     <div id="app">
         <main class="main-app">
             <div class="container position-app">
@@ -43,66 +43,12 @@
 
                         <!-- SEZIONE CONTATTI -->
                         <ul class="bg-light contact-list">
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                            <li v-for="(contact, i) in contacts" :key="i"
+                            class="user" :class="{ 'active' : i === currentIndex }"
+                            >
+                                <img class="icon-img" :src="contact.avatar" alt="foto profilo">
                                 <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
-                                </div>
-                                <span class="chat-time">12:00</span>  
-                            </li>
-                            <li class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
-                                <div>
-                                    <h2 class="user-name">nome</h2>  
+                                    <h2 class="user-name"> {{ contact.name }} </h2>  
                                     <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
                                 </div>
                                 <span class="chat-time">12:00</span>  
@@ -115,10 +61,10 @@
                         <!-- PROFILO DELL'USER CON CUI STA AVVENENDO LA CHAT -->
                         <div class="app-item bg-light-grey1">
                             <div class="user">
-                                <img class="icon-img" src="./img/avatar_1.jpg" alt="foto profilo">
+                                <img class="icon-img" :src="contacts[currentIndex].avatar" alt="foto profilo">
                                 <div>
-                                    <h2 class="user-name">nome</h2>  
-                                    <p class="chat-preview">Lorem ipsum dolor sit amet consectetur.</p>  
+                                    <h2 class="user-name">{{ contacts[currentIndex].name }}</h2>  
+                                    <p class="chat-preview"> Lorem ipsum dolor sit amet consectetur.</p>  
                                 </div> 
                             </div>
                             <i class="fa-solid fa-message"></i>
@@ -127,8 +73,9 @@
 
                         <!-- CONTENUTO DELLA CHAT -->
                         <div class="chat-content">
-                            
-
+                            <p class="message sent">testo inviato</p>
+                            <p class="message received">testo ricevuto</p>
+                            <p class="message sent">testo inviato</p>
                         </div>
 
                         <!-- INPUT PER SCRIVERE IL TESTO DEL MESSAGGIO -->
